--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.1.1"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
 pillow = "^11.0.0"
+ipython = "^8.29.0"
+django-apscheduler = "^0.7.0"
 
 
 [build-system]
