--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 pillow = "^11.0.0"
 ipython = "^8.29.0"
 django-apscheduler = "^0.7.0"
+redis = "^5.2.0"
 
 
 [build-system]
