--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pillow = "^11.0.0"
 ipython = "^8.29.0"
 django-apscheduler = "^0.7.0"
 redis = "^5.2.0"
+black = "^24.10.0"
+isort = "^5.13.2"
 
 
 [build-system]
